dfir_rs/tests/compile-fail/surface_lattice_fold_badgeneric.rs.ignore
use dfir_rs::dfir_syntax;

fn main() {
    let mut df = dfir_syntax! {
        source_iter([1,2,3,4,5])
            -> lattice_fold::<'static, usize>(Default::default())
            -> for_each(|x| println!("Least upper bound: {:?}", x));
    };
    df.run_available();
}
